--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -8,21 +9,29 @@
   --clr-white: #eee;
 }
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
   background-color: var(--bg-color);
 }
-search{
-    width: 100vw;
-    height: 20vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+h1{
+    margin-top: 10vh;
+    color:var(--clr-white);
 }
-form{
-    display: flex;
-    justify-content: center;
-    width: 100%;
+search {
+  width: 100vw;
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-form input{
-    height: 5vh;
-    width: 50%;
+form {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+form input {
+  height: 5vh;
+  width: 50%;
 }
