--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 :root {
   --bg-color: #111d4a;
   --clr-white: #eee;
+  --clr-dark:#333;
 }
 body {
   display: flex;
@@ -15,9 +16,9 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: var(--bg-color);
 }
-h1{
-    margin-top: 10vh;
-    color:var(--clr-white);
+h1 {
+  margin-top: 10vh;
+  color: var(--clr-white);
 }
 search {
   width: 100vw;
@@ -34,4 +35,10 @@ form {
 form input {
   height: 5vh;
   width: 50%;
+}
+.card {
+  width: min(40vw,200px);
+  height: 30vh;
+  background-color: var(--clr-white);
+  box-shadow: 10px 10px 5px 0px var(--clr-dark);
 }
