--- a/src/style.css
+++ b/src/style.css
@@ -36,12 +36,22 @@ form input {
   height: 5vh;
   width: 50%;
 }
-.character-card{
-  width: min(40vw,200px);
+.character-card {
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: min(40vw, 200px);
   height: 30vh;
   background-color: var(--clr-white);
   box-shadow: 10px 10px 5px 0px var(--clr-dark);
 }
-.character-card img{
+.character-card img {
   height: 50%;
+}
+.container{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap:30px;
 }
