--- a/src/style.css
+++ b/src/style.css
@@ -55,3 +55,10 @@ form input {
   grid-template-columns: repeat(3,1fr);
   gap:30px;
 }
+/* Styles for screens narrower than 480px */
+@media (max-width: 480px) {
+  .container{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+  }
+}
